# wasm-brotli

./: .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .travis.yml  Cargo.toml  README.md  benchmark.md  benchmark.ts  jest.config.js  package-lock.json  package.json  rollup.config.js  tsconfig.json  update-package-json.ts
.github/: dependabot.yml
__tests__/: sample.txt  wasm-brotli.test.ts
benchmark/: README.md  package-lock.json  package.json  rollup.config.js
benchmark/src/: index.js
src/: cString.js  index.js  lib.rs  utf8Decoder.js
src/__tests__/: wasm-brotli.spec.js
src/brotli/: .gitignore  Cargo.toml
src/brotli/src/: main.rs
