[package]
name = "wasm-brotli"
version = "2.0.2"
edition = "2018"
description = "🗜 WebAssembly compiled Brotli library"
repository = "https://github.com/dfrankland/wasm-brotli#readme"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
debug_assertions = []

[dependencies]
brotli = "3.3.0"
console_error_panic_hook = { version = "0.1.6", optional = true }
wasm-bindgen = "0.2.54"
wee_alloc = "0.4.5"
cfg-if = "0.1.10"

[dev-dependencies]
wasm-bindgen-test = "0.3.4"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
